kubernetes/talos/deploy/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: immich
      release: immich
  template:
    metadata:
      labels:
        app: immich
        release: immich
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        # --- General ---
        - image: ghcr.io/immich-app/immich-server:v3
          imagePullPolicy: IfNotPresent
          name: immich

          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault

          ports:
            - containerPort: 2283
              name: http
              protocol: TCP
          # ---------------

          # --- Mounts ---
          volumeMounts:
            - mountPath: /data
              name: data

          # ---------------
      volumes:
        - name: data
          nfs:
            server: 192.168.100.40
            path: "/volume2/Immich"
