kubernetes/talos/deploy/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 2283
    protocol: TCP
    targetPort: http
  selector:
    app: immich
    release: immich
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: ml
    port: 3003
    protocol: TCP
    targetPort: ml
  selector:
    app: immich-ml
    release: immich-ml
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: redis
  selector:
    app: immich-redis
    release: immich-redis
  type: ClusterIP
